--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.8'
 services:
   db:
     build: .
-    container_name: mysql-demo
+    container_name: drama_database
     platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: songs_list
+      MYSQL_DATABASE: dramas_list
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
-      - 3306:3306
+      - 3307:3306
     volumes:
       - ./sql:/docker-entrypoint-initdb.d
       - my-vol:/var/lib/mysql
