--- a/src/test/resources/datasets/expectedDramaDataAfterUpdate.yml
+++ b/src/test/resources/datasets/expectedDramaDataAfterUpdate.yml
@@ -3,3 +3,11 @@ dramas:
     title: "更新されたドラマ"
     year: "2023"
     priority: "C"
+  - id: 2
+    title: "偶然見つけたハル"
+    year: "2019"
+    priority: "C"
+  - id: 3
+    title: "A-TEEN"
+    year: "2018"
+    priority: "A"
