--- a/.github/workflows/dramaTest.yml
+++ b/.github/workflows/dramaTest.yml
@@ -23,7 +23,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Conduct Tests
-        run: ./gradlew test
+        run: ./gradlew test --info
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
